2024-03-30 [1.42 Bld 267]

- Addition    : Add new Z80 pseudo instruction 'J' that assembles
                as JR or JP, depending on branch distance.
- Bugfix      : Correct PHASE when handling addresses beyond 2 GByte.
- Addition    : Add a command-line switch '-wrelative' to enable
                warnings about possible relative jump.
- Change      : Rework the indiredt address expression parser for
                the following targets: 80C16x, uCOM78, 8086,
                TLCS-870(C), TLCS-90(0(0)), XA, Z80, Z8000.
                Behaviour *should* be the same as before.

2024-03-25 [1.42 Bld 266]

- Bugfix      : Add missing error message about invalid length
                of multi character constants.
- Bugfix      : Regard questionable forward references for Z80.
- Change      : The default target is now NONE instead of 68008.
                A target has to be set explicitly to generate code.

2024-03-15 [1.42 Bld 265]

- Change      : Learn maximum include level in first pass, so
                include nesting field in listing has fixed length
                in subsequent passes.
- Bugfix      : Correct address range checking for TLCS-900 and Z380.

2024-03-08 [1.42 Bld 264]

- Bugfix      : On Zx80, do not use indexed mode with extended
                displacement if the target is not Z380, even in
                case of a first-pass-unknown symbol.

2024-03-03 [1.42 Bld 263]

- Addition    : Add support for Sharp SC62015/SC61860 (contribution
                by Haruo Asano)

2024-02-11 [1.42 Bld 262]

- Addition    : New command line switch '-underscore-macroargs' to
                allow underscores in macro parameter names
- Change      : No longer allow omission of an empty index argument
                on 6809.  Use 'plainbase on' or '-plainbase' to allow
                this again.
- Bugfix      : 'DS 0' to align program counter did not operate
                correctly on addresses beyond 2 GByte

2024-01-28 [1.42 Bld 261]
