@@ -49,7 +49,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand M"arz 2024}
+{\large Stand April 2024}
 \end{raggedright}
 
 \clearpage
