@@ -67,7 +67,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition March 2024}
+{\large Edition April 2024}
 \end{raggedright}
 
 \clearpage
@@ -9196,7 +9196,7 @@ As mentioned before, the statement
        Z80SYNTAX <ON|OFF|EXCLUSIVE>
 \end{verbatim}
 makes it possible to write the vast majority of 8080/8085
-instructions in 'Z80 s		tyle', i.e. with less mnemonics but with
+instructions in 'Z80 style', i.e. with less mnemonics but with
 operands that are easier to understand.  In non-exclusive mode,
 the Z80 syntax is not allowed for the following instructions,
 because they conflict with existing 8080 mnemonics:
