@@ -1,3 +1,13 @@
+2024-04-03 [1.42 Bld 268]
+
+- Bugfix      : Z80: Do not warn about possible relative jump if
+                relative jumping is not allowed for the given
+                condition.
+- Bugfix      : Z80: Do not warn about possible relative jump if
+                the target address's value is questionable.  This
+                applies e.g. to forward references in the first
+                pass.
+
 2024-03-30 [1.42 Bld 267]
 
 - Addition    : Add new Z80 pseudo instruction 'J' that assembles
